# BDT_HW5_GIT_DOKCER

./: pyproject.toml
.github/workflows/: docker-build.yaml  docker-build.yml
myproject/: pyvenv.cfg
src/myproject/: Dockerfile  the_project.py
tests/: testMyProject.py
